# vitality-health

./: .env  .env.example  .gitignore  README.md  app.py  pyproject.toml
agent_marketplace/: config.py  marketplace.py
agent_marketplace/agents/: __init__.py  ai_agent.py  food_delivery_agent.py  health_agent.py  personal_ai.py
agent_marketplace/schemas/: agents.py
agent_marketplace/services/: geocoding.py  llm.py
agent_marketplace/tools/: __init__.py  coinbase_commerce.py
data/personal_data/: README.md
data/personal_data/David Hess/: basic_info.json  conversation_data.json  purchase_history_data.json  user_ai_interaction_data.json
data/personal_data/Kelly Simon/: basic_info.json  conversation_data.json  purchase_history_data.json  user_ai_interaction_data.json
data/personal_data/Nicholas Richmond/: basic_info.json  conversation_data.json  purchase_history_data.json  sample_health_data.json  user_ai_interaction_data.json
examples/: agent_to_agent_chat.py  health_agent_chat.py  simulate_user_to_health_chat.py  user_to_personal_to_health_chat.py
